init: migrate project from milestone1 to milestone2 structure